@@ -67,8 +67,16 @@ foreach ($irc_message_types as $irc_message_type) {
 $irc->registerTimehandler(300000, $bot, 'invoke_irc_bot_cron');
 
 // connect and begin listening.
-$irc->connect( variable_get('bot_server', 'irc.freenode.net'), variable_get('bot_server_port', 6667) );
-$irc->login( variable_get('bot_nickname', 'bot_module'), variable_get('bot_nickname', 'bot_module').' :http://drupal.org/project/bot', 8, variable_get('bot_nickname', 'bot_module') );
+$irc->connect(variable_get('bot_server', 'irc.freenode.net'), variable_get('bot_server_port', 6667));
+$irc->login(variable_get('bot_nickname', 'bot_module'), variable_get('bot_nickname', 'bot_module').' :http://drupal.org/project/bot', 8, variable_get('bot_nickname', 'bot_module'), (variable_get('bot_password', '') != '') ? variable_get('bot_password', '') : NULL);
+
+// to support passwords, we have to make a single join per channel.
+$channels = preg_split('/\s*,\s*/', variable_get('bot_channels', '#test'));
+foreach ($channels as $channel) {
+  $channel_parts = explode(' ', $channel);
+  $irc->join($channel_parts[0], isset($channel_parts[1]) ? $channel_parts[1] : NULL);
+}
+
 $irc->join(preg_split('/\s*,\s*/', variable_get('bot_channels', '#test')));
 $irc->listen(); // go into the forever loop - no code after this is run.
 $irc->disconnect(); // if we stop listening, disconnect properly.
